assets/stylesheets/common/knowledge-explorer.scss
.knowledge-explorer {
  }
 .knowledge-explorer-search {
  align-items: center;
  background-color: $primary-very-low;
  display: flex;
  justify-content: center;
  padding: 1.5em 1em;
  .knowledge-explorer-search-bar {
      height: 50px;
      margin-bottom: 0px;
      width: 500px;
  }
 }
 .knowledge-explorer-browse {
   display: flex;
   .loading-container {
     display: flex;
     flex-basis: 75%;
     padding: 10px 0 10px 10px;
   }
   .knowledge-explorer-results {
     display: flex;
     flex-direction: column;
     flex-basis: 100%;
     .result-count {
       padding-top: 15px;
       padding-left: 10px;
     }
   }
   .knowledge-explorer-tags {
     flex-basis: 25%;
      padding: 10px 10px 10px 0;
      a {
        color: $primary;
      }
      .knowledge-explorer-tag {
        display: flex;
        align-items: center;
        cursor: pointer;
        height: 30px;
        padding-left: 10px;
        .d-icon {
          height: 1em;
          &.d-icon-plus {
            height: 0.75em;
            margin-right: 0.25em;
          }
          &.d-icon-times-circle {
            margin-left: 0.25em;
          }
        }
        &:hover {
          background: $highlight-medium;
        }
        &.selected:hover {
          background: $danger-low;

          .d-icon {
            color: $danger;
          }
        }
        .tag-id {
          margin-right: 3px;
        }
      }

      .selected {
        font-weight: bold;
      }
    }
    .knowledge-explorer-topic-list {
      flex-basis: 100%;
      .knowledge-explorer-topic-link {
        color: $tertiary;
        cursor: pointer;
      }
      .discourse-tag {
        padding-right: 5px;
      }
    }
  .knowledge-explorer-topic {
    display: flex;
    flex-direction: column;
    .knowledge-explorer-nav-link {
      font-weight: 700;
      &.return {
        font-size: $font-down-1;
        &::before {
          content: "«";
          margin-right: 5px;
        }
      }
      &.more {
        margin-left: auto;
        font-size: $font-up-1;
        padding: 10px 0;
        &::after {
          content: "»";
          margin-left: 5px;
        }
      }
    }
    .topic-content {
      padding-top: 10px;
    }
 } 
}

